// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BidStatusComponent matches snapshot for APPROVED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="check"
  />
   
  Approved
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for CLOSED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="times-circle-o"
  />
   
  Closed
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for DECLINED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="times"
  />
   
  Bid unapproved
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for DRAFT 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="bookmark"
  />
   
  Draft bid
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for HAND_SHAKE_ACCEPTED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="handshake-o"
  />
   
  Handshake registered
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for HAND_SHAKE_DECLINED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="times"
  />
   
  Handshake declined
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for HAND_SHAKE_OFFERED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="star"
  />
   
  Handshake offered
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for IN_PANEL 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="clock-o"
  />
   
  In panel
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for SUBMITTED 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="thumbs-o-up"
  />
   
  Bid submitted
   for 
  Title
</div>
`;

exports[`BidStatusComponent matches snapshot for other statuses 1`] = `
<div
  className="bid-list-card-title-status"
>
  <FontAwesome
    name="question"
  />
   
  Status unknown
   for 
  Title
</div>
`;
